log/build_2023-06-29_13-19-53/application/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/spider/gwpspider_ws/install/application/lib/python3.10/site-packages/application/app.py", line 44
    def send_request(self)
                          ^
SyntaxError: expected ':'

